src/objects/Project_Cost__c.object
<CustomObject>
    <description>Repository object for line by line breakout of projection items.</description>
    <fields>
        <fullName>Engineering_Item_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering Item Master</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extracted_Cost__c</fullName>
        <description>Cost of the item, before any multiplier is added</description>
        <label>Extracted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Project</label>
        <referenceTo>PM_Project__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Cost__c</fullName>
        <description>Cost of the item, after the multiplier is added</description>
        <label>Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Cost</label>
    <nameField>
        <label>Project Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>